--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.3.0
+  flutter_tts: ^4.2.2
+  speech_to_text: ^7.0.0
+  sqflite: ^2.0.0
+  path: ^1.9.0
+  connectivity_plus: ^6.1.3
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  image_picker: ^1.0.0
+  google_generative_ai: ^0.4.6
+  mailer: ^6.0.1
+  photo_manager: ^3.2.2
+  cloud_firestore: ^5.6.6
+  google_sign_in: ^6.2.1
+  device_info_plus:
+  permission_handler:
+  shared_preferences:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
